DanielWagnerHall: Use ProcessBuilder to launch Chrome instead of manual hackery
r7479